--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=app.db"
+  },
+
+  "Twilio": {
+    "AccountSid": "AC5da2a73cfbfa1e972bf20f674a186106",
+    "AuthToken": "6cce08c5ee67897bd86eee99daebe666"
   }
 }
