--- a/TeddyMVC.csproj
+++ b/TeddyMVC.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Rotativa.AspNetCore" Version="1.3.2" />
+    <PackageReference Include="Twilio" Version="7.2.2" />
   </ItemGroup>
 
 </Project>
