--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=app.db"
+  },
+
+  "Twilio": {
+    "AccountSid": "AC5da2a73cfbfa1e972bf20f674a186106",
+    "AuthToken": "6cce08c5ee67897bd86eee99daebe666"
   }
 }
